--- a/Shop/landing/app/scss/main.scss
+++ b/Shop/landing/app/scss/main.scss
@@ -142,7 +142,7 @@ table {
 	 	  height: 12px;
 	 	  background: url(../img_compressed/item_arr.png);
 	 	  bottom: 55px;
-	    animation: slide-bottom 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 3s infinite both;
+	    animation: slide-bottom 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) infinite both;
 	 }
 }
 .heading_text_area {
