--- a/Shop/card-tiles/app/scss/catalog-tiles.scss
+++ b/Shop/card-tiles/app/scss/catalog-tiles.scss
@@ -1,8 +1,180 @@
 .product_card {
     margin-top: 0;
 }
-.gallery_information_columns .wrap.gray {
+.nano {
+    max-height: calc(100vh - 100px);
+}
+.modal_information_tabs .drop_tabs {
+    margin-top: 15px;
+}
+.information_button {
     background-color: #fff;
+}
+.info_title {
+    color: #000;
+    font-size: 16px;
+    font-weight: bold;
+}
+.title_container {
+    span {
+        display: block;
+    }
+    .title {
+        color: #1e0602;
+        font-weight: bold;
+        font-size: 18px;
+        padding: 5px 0;
+    }
+}
+.code,
+.size {
+    white-space: nowrap;
+    font-size: 12px;
+}
+
+#modal-popup {
+    position: relative;
+    overflow: hidden;
+    .tile_categories {
+        display: flex;
+        justify-content: center;
+        padding-bottom: 15px;
+        a {
+            margin-right: 20px;
+            font-size: 16px;
+            border-bottom: 1px dotted;
+            &:last-child {
+                margin: 0;
+            }
+            &:hover {
+                color: #197ac4;
+            }
+        }
+    }
+    .gallery {
+    }
+    .container_gallery {
+        width: 70%;
+    }
+    .slider_gallery {
+        margin: 0;
+    }
+    .modal_nav {
+        position: absolute;
+        z-index: 2;
+        width: 100%;
+        bottom: 0;
+        transform: translateY(100%);
+        transition: .3s;
+        .images_nav {
+            display: flex;
+            justify-content: center;
+        }
+        .img_block {
+            width: 60px;
+            height: 60px;
+            padding: 5px;
+            border: 1px solid #ebebeb;
+            cursor: pointer;
+            position: relative;
+            margin-right: 5px;
+            &:last-child {
+                margin: 0;
+            }
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .img_active {
+            &:after {
+                content: '';
+                display: block;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                left: 0;
+                top: 0;
+                border: 5px solid #ffcc33;
+            }
+        }
+        .btn_open {
+            display: block;
+            width: 94px;
+            height: 40px;
+            position: absolute;
+            left: 50%;
+            top: -40px;
+            transform: translateX(-50%);
+            background-color: #ffcc33;
+            cursor: pointer;
+            border-radius: 4px 4px 0 0;
+            &:after {
+                color: #2b1205;
+                transition: .3s;
+                font-family: 'Ico Moon' !important;
+                font-size: 26px;
+                speak: none;
+                font-style: normal;
+                font-weight: normal;
+                font-variant: normal;
+                text-transform: none;
+                line-height: 1;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
+                content: "\e920";
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                margin-left: -8px;
+                margin-top: -14px;
+            }
+        }
+        .content {
+            padding: 15px 0;
+            background-color: rgba(255, 255, 255, 0.9);
+            position: relative;
+            &:before {
+                content: '';
+                position: absolute;
+                display: block;
+                top: -1px;
+                width: 100%;
+                height: 1px;
+                background-color: #ffcc33;
+            }
+        }
+    }
+    .active_nav {
+        transform: translateY(0);
+        .btn_open:after {
+            transform: rotate(180deg);
+        }
+    }
+}
+
+.gallery_information {
+    background-color: transparent;
+}
+
+.to_catalog_btn {
+    display: inline-block;
+    font-size: 16px;
+    padding: 10px 60px;
+    border-radius: 4px;
+    transition: .3s;
+    background-color: #ffcc33;
+    color: #000;
+}
+.gallery_information_columns {
+    border: 1px solid #e5e5e5;
+    background-color: #fff;
+}
+.gallery_information {
+    border: none;
+}
+.table_product {
+    margin-top: 20px;
 }
 .gallery_information_tabs .tab_name {
     font-size: 18px;
@@ -28,19 +200,20 @@
     flex-wrap: wrap;
     .price {
         white-space: nowrap;
+        padding: 0 5px;
     }
     .old {
         font-weight: normal;
         color: #8d8d8d;
-        margin-right: 10px;
+        padding: 0 5px;
         text-decoration: line-through;
     }
 }
 .container_your_set {
-    margin-bottom: 60px;
+    margin-bottom: 30px;
 }
 .sort_line {
-    margin: 30px 0;
+    padding: 30px 0;
     .content_sort {
         border: 1px solid #e5e5e5;
         background: #fff;
@@ -77,6 +250,10 @@
             color: #1e0602;
         }
     }
+}
+
+.thumbs_small .headline span {
+    margin: 0;
 }
 .card {
     padding-bottom: 20px;
@@ -135,7 +312,7 @@
     .title_section {
         border: 1px solid #e5e5e5;
         border-top: none;
-        padding: 15px;
+        padding: 20px;
     }
     .type_section,
     .title {
@@ -159,6 +336,9 @@
         padding: 20px;
         display: flex;
         justify-content: space-between;
+        .form_row {
+            display: none;
+        }
         .select_quantity {
             display: flex;
             align-items: center;
@@ -203,29 +383,75 @@
             padding: 0 5px;
             flex: 1 1 100px;
         }
-        .more_btn, .add_btn {
+        .more_btn,
+        .add_btn {
             border: 1px solid #e5e5e5;
             color: #818181;
             border-radius: 4px;
             transition: .3s;
-            padding: 10px 0;
-            text-align: center;
-            display: block;
+            justify-content: center;
+            align-items: center;
+            display: flex;
             font-size: 16px;
             cursor: pointer;
+            height: 40px;
         }
         .add_btn {
             border-color: #8ec824;
             color: #8ec824;
         }
+        .add_btn_active {
+            background-color: #8ec824 !important;
+            color: #fff;
+        }
     }
 }
 
-.card_banner_box, .product_slider {
+.current_choise {
+    display: none;
+}
+
+.thumbs_small .headline a {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+
+}
+
+.headline span {
+    display: flex !important;
+    align-items: flex-end !important;
+    justify-content: center;
+}
+
+.card_banner_box,
+.product_slider {
     margin-top: 40px;
 }
 .product_slider {
     margin-bottom: 20px;
+}
+.set_product {
+    display: inline;
+    line-height: 30px;
+}
+.link_section .add_btn i {
+    display: none;
+}
+.set_product .nowrap_sction {
+    white-space: nowrap;
+}
+.thumbs_small .headline span {
+    height: auto;
+}
+#set {
+    display: block !important;
+}
+
+.gallery_information_tabs {
+    border-right: none !important;
+    border-left: none !important;
+    border-bottom: none !important;
 }
 
 @media screen and (min-width: 1025px) {
@@ -234,7 +460,126 @@
         border-color: #999999;
     }
     .card_content .link_section .add_btn:hover {
-        background-color: #8ec824;
+        background-color: #9fda34;
         color: #fff;
+    }
+    .to_catalog_btn:hover {
+        background-color: #ffdd7d;
+    }
+}
+@media screen and (max-width: 992px) {
+    .sort_line .count {
+        display: none;
+    }
+    #modal-popup .container_gallery {
+        width: 100%;
+    }
+}
+@media screen and (max-width: 878px) {
+    .card_content .price_section {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        .price_item {
+            margin-top: 20px;
+            align-items: center;
+            height: 39px;
+            justify-content: flex-start;
+        }
+    }
+    .card_content .link_section span:first-child {
+        flex: 1 1 30px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .card_content .link_section span:first-child {
+        flex: 4 4 100px;
+    }
+    .link_section .add_btn {
+        font-size: 0 !important;
+        background-color: #8ec824;
+        height: 42px;
+        padding: 0;
+        display: block;
+        height: 100%;
+    }
+    .link_section .add_btn i {
+        display: block;
+        color: #fff;
+        font-size: 20px;
+    }
+}
+
+
+@media screen and (max-width: 576px) {
+    .sort_line .content_sort {
+        position: relative;
+        z-index: 2;
+        display: block;
+        border: none;
+    }
+    .category_content {
+        height: 100%;
+    }
+    .current_choise {
+        display: flex;
+        height: 100%;
+        border: 1px solid #e5e5e5;
+        justify-content: center;
+        align-items: center;
+        color: #1e0602;
+        .arr_item {
+            border-color: #333 transparent transparent transparent;
+            border-style: solid;
+            border-width: 5px 4px 0 4px;
+            height: 0;
+            left: 50%;
+            margin-top: 2px;
+            margin-left: 5px;
+            width: 0;
+        }
+    }
+    .active_arr {
+        .arr_item {
+            transform: rotate(180deg);
+        }
+    }
+    .sort_line .nav_tab {
+        position: absolute;
+        display: block;
+        display: none;
+        top: 100%;
+        width: 100%;
+        height: auto;
+        background: #fff;
+        border: 1px solid #e5e5e5;
+        padding: 10px 20px;
+        margin-top: -1px;
+    }
+    .sort_line .nav_tab a {
+        display: block;
+        margin: 0;
+        padding: 5px 0;
+    }
+    .gallery_information_tabs,
+    .modal_information_tabs,
+    .notification_container {
+        display: block;
+    }
+    .category-name {
+        padding-top: 20px;
+    }
+    .gallery_information_tabs .list_description .item {
+        width: 100%;
+    }
+    .container_your_set {
+        margin-top: 35px;
+    }
+    .container_your_set .box_title {
+        margin-bottom: 30px;
+    }
+    .your_set_title {
+        margin-bottom: 30px;
     }
 }
