--- a/portfolio/Crystal/app/css/main.css
+++ b/portfolio/Crystal/app/css/main.css
@@ -3,11 +3,39 @@
   z-index: 1;
   padding-bottom: 100px; }
 
+.arrow_right,
+.arrow_left,
+.arrow_right_brands,
+.arrow_left_brands {
+  display: block;
+  position: absolute;
+  height: 52px;
+  width: 27px;
+  background: url(../img/icons/arrow.png) no-repeat;
+  -webkit-background-size: contain;
+          background-size: contain;
+  top: 24%;
+  opacity: 0.7;
+  cursor: pointer; }
+
+.arrow_left,
+.arrow_left_brands {
+  left: 0; }
+
+.arrow_right,
+.arrow_right_brands {
+  right: 0;
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg); }
+
 .title_section {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
+  z-index: 3;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
       -ms-flex-pack: center;
@@ -54,57 +82,59 @@
           -ms-transform: translateX(100%);
               transform: translateX(100%); }
 
-.title_desription p {
-  text-align: center;
-  color: #939598;
-  font: 1.5em "SupermolotLight";
-  line-height: 130%;
-  margin-bottom: 0.15em; }
-  .title_desription p span {
-    position: relative;
-    font-family: "SupermolotRegular";
-    padding-right: 1em; }
-    .title_desription p span:after {
-      content: '';
-      display: block;
-      position: absolute;
-      right: 0;
-      top: 0;
-      width: 11px;
-      height: 11px;
-      background: url(../img/icons/title_copy.png) no-repeat;
-      -webkit-background-size: contain;
-              background-size: contain; }
-
-.title_desription .post_txt {
-  color: #f11f83;
-  display: block;
-  font-size: 1.5em;
-  text-align: center;
-  letter-spacing: 0.05em;
+.title_desription {
   position: relative;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center; }
-  .title_desription .post_txt:after {
-    content: '';
-    height: 25px;
-    width: 25px;
+  z-index: 3; }
+  .title_desription p {
+    text-align: center;
+    color: #939598;
+    font: 1.5em "SupermolotLight";
+    line-height: 130%;
+    margin-bottom: 0.15em; }
+    .title_desription p span {
+      position: relative;
+      font-family: "SupermolotRegular";
+      padding-right: 1em; }
+      .title_desription p span:after {
+        content: '';
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 11px;
+        height: 11px;
+        background: url(../img/icons/title_copy.png) no-repeat;
+        -webkit-background-size: contain;
+                background-size: contain; }
+  .title_desription .post_txt {
+    color: #f11f83;
     display: block;
-    background: url(../img/icons/map_item.png) no-repeat;
-    -webkit-background-size: contain;
-            background-size: contain;
-    margin-top: 6px; }
+    font-size: 1.5em;
+    text-align: center;
+    letter-spacing: 0.05em;
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .title_desription .post_txt:after {
+      content: '';
+      height: 25px;
+      width: 25px;
+      display: block;
+      background: url(../img/icons/map_item.png) no-repeat;
+      -webkit-background-size: contain;
+              background-size: contain;
+      margin-top: 6px; }
 
 .slick-dots {
   bottom: 33px;
@@ -422,25 +452,6 @@
   .crystal_labs .container {
     position: relative;
     z-index: 2; }
-  .crystal_labs .arrow_right,
-  .crystal_labs .arrow_left {
-    display: block;
-    position: absolute;
-    height: 52px;
-    width: 27px;
-    background: url(../img/icons/arrow.png) no-repeat;
-    -webkit-background-size: contain;
-            background-size: contain;
-    top: 24%;
-    opacity: 0.7;
-    cursor: pointer; }
-  .crystal_labs .arrow_left {
-    left: 0; }
-  .crystal_labs .arrow_right {
-    right: 0;
-    -webkit-transform: rotate(180deg);
-        -ms-transform: rotate(180deg);
-            transform: rotate(180deg); }
   .crystal_labs .labs_container {
     margin-top: 20px;
     position: relative;
@@ -562,10 +573,210 @@
       font: 1.8em "SupermolotRegular";
       text-align: center; }
 
+.brands {
+  padding-bottom: 80px;
+  position: relative;
+  z-index: 3; }
+  .brands .post_txt {
+    text-align: center;
+    position: relative;
+    z-index: 2; }
+    .brands .post_txt span {
+      font: 1.5em "SupermolotRegular";
+      padding: 20px 50px 0px 50px;
+      display: block; }
+  .brands .container {
+    position: relative; }
+    .brands .container:after {
+      content: '';
+      display: block;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 155px;
+      background: url(../img/bg_partners.png) no-repeat center center;
+      -webkit-background-size: contain;
+              background-size: contain;
+      -webkit-transform: translateY(50%);
+          -ms-transform: translateY(50%);
+              transform: translateY(50%); }
+  .brands .slider_container {
+    position: relative;
+    z-index: 2;
+    padding: 0 37px; }
+    .brands .slider_container:before {
+      content: '';
+      position: absolute;
+      display: block;
+      height: 40px;
+      width: 60px;
+      border: 2px solid #ff007f;
+      border-top: none;
+      border-right: none;
+      bottom: 0;
+      left: 0; }
+    .brands .slider_container:after {
+      content: '';
+      position: absolute;
+      display: block;
+      height: 40px;
+      width: 60px;
+      border: 2px solid #ff007f;
+      border-top: none;
+      border-left: none;
+      bottom: 0;
+      right: 0; }
+  .brands .arrow_right_brands,
+  .brands .arrow_left_brands {
+    top: 50%;
+    margin-top: -26px; }
+  .brands .slider_brands .brand_slide {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 0 20px;
+    position: relative;
+    outline: none; }
+    .brands .slider_brands .brand_slide:before {
+      content: "";
+      display: block;
+      padding-top: 100%; }
+    .brands .slider_brands .brand_slide .img_content {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center; }
+  .brands .slider_brands img {
+    width: 100%;
+    height: auto; }
+
+.price {
+  position: relative; }
+  .price .price_container {
+    position: relative;
+    z-index: 2;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-top: 10px; }
+    .price .price_container:after {
+      content: '';
+      position: absolute;
+      display: block;
+      width: 950px;
+      height: 1200px;
+      background: url(../img/bg__price.png);
+      -webkit-background-size: contain;
+              background-size: contain;
+      -webkit-transform: translate(-32%, -42%);
+          -ms-transform: translate(-32%, -42%);
+              transform: translate(-32%, -42%); }
+  .price .center_price_block {
+    width: 60%;
+    position: relative;
+    z-index: 2;
+    background-color: rgba(0, 0, 0, 0.2);
+    background: url(../img/bg_price.png) no-repeat top center;
+    -webkit-background-size: contain;
+            background-size: contain; }
+    .price .center_price_block:after {
+      content: '';
+      display: block;
+      padding-top: 100%; }
+    .price .center_price_block:before {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 106px;
+      height: 96px;
+      background: url(../img/price_item1.png) no-repeat center center;
+      -webkit-background-size: contain;
+              background-size: contain;
+      right: 0;
+      -webkit-transform: translateX(83%);
+          -ms-transform: translateX(83%);
+              transform: translateX(83%);
+      top: 15%; }
+    .price .center_price_block .price_block_container {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      padding: 0 15%;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
+      .price .center_price_block .price_block_container:before {
+        content: '';
+        position: absolute;
+        right: 0;
+        width: 146px;
+        height: 146px;
+        background: url(../img/price_item2.png) no-repeat center center;
+        -webkit-background-size: contain;
+                background-size: contain;
+        top: 0;
+        right: 10%;
+        -webkit-transform: translateY(-20%);
+            -ms-transform: translateY(-20%);
+                transform: translateY(-20%); }
+      .price .center_price_block .price_block_container img {
+        width: 100%; }
+    .price .center_price_block a.sign_up {
+      text-transform: uppercase;
+      font: 1.3em "SupermolotRegular";
+      display: inline-block;
+      background: url(../img/bg_button.png) no-repeat center center;
+      padding: 8px 20px;
+      color: #fff;
+      padding-right: 45px;
+      -webkit-background-size: 100% 100%;
+              background-size: 100% 100%;
+      position: relative;
+      margin: 10% 0;
+      text-decoration: underline; }
+
+.stock {
+  padding-top: 20px; }
+
 @media screen and (min-width: 1025px) {
   .links_block a:hover,
   .crystal_labs .arrow_right:hover,
-  .crystal_labs .arrow_left:hover {
+  .crystal_labs .arrow_left:hover,
+  .arrow_right_brands:hover,
+  .arrow_left_brands:hover {
     opacity: 1; }
   .map .more_crystal a:hover {
     color: #717171; } }
